AC_INIT(src/Rgtk.c)

DEFINES=

GTK_VERSION="2.8.0"

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GTK_VERSION, HAVE_GTK="1",
  AC_MSG_ERROR(GTK version $GTK_VERSION required))

AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(HAVE_GTK)

AC_ARG_ENABLE(libglade,
  [  --disable-libglade          Enable libglade support],
  [use_libglade=$enableval], [use_libglade=yes])

if test "x$use_libglade" = "xyes"; then
	PKG_CHECK_MODULES(LIBGLADE, libglade-2.0, have_libglade=yes, AC_MSG_WARN(libglade not found, disabling))
fi

if test "x$have_libglade" = "xyes"; then
	DEFINES="$DEFINES -DHAVE_LIBGLADE"
else
	rm R/libglade*
	rm src/libglade*
fi

AC_SUBST(LIBGLADE_CFLAGS)
AC_SUBST(LIBGLADE_LIBS)
AC_SUBST(HAVE_LIBGLADE)

AC_ARG_ENABLE(gtkmozembed,
  [  --disable-gtkmozembed         Enable gtkmozembed support],
  [use_gtkmozembed=$enableval], [use_gtkmozembed=yes])
  
if test "x$use_gtkmozembed" = "xyes"; then
	PKG_CHECK_MODULES(GTKMOZEMBED, firefox-gtkmozembed, have_gtkmozembed=yes, 
		AC_MSG_WARN(firefox-gtkmozembed not found, disabling))
fi

if test "x$have_gtkmozembed" = "xyes"; then
	DEFINES="$DEFINES -DHAVE_GTKMOZEMBED"
else
	rm R/gtkmozembed*
	rm src/gtkmozembed*
fi

AC_SUBST(GTKMOZEMBED_CFLAGS)
AC_SUBST(GTKMOZEMBED_LIBS)
AC_SUBST(HAVE_GTKMOZEMBED)

AC_SUBST(R_PACKAGE_DIR)
AC_SUBST(INSTALL_DIR)

AC_SUBST(DEFINES)

AC_OUTPUT(src/Makevars)


